Use correct starting point when doing CHA analysis for interfaces calls