@@ -1,10 +1,12 @@
 /*
- * Copyright (c) 2012, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -22,9 +24,13 @@
  */
 package org.graalvm.compiler.core.test.inlining;
 
+import java.util.regex.Pattern;
+
+import org.graalvm.compiler.core.common.GraalOptions;
 import org.graalvm.compiler.core.test.GraalCompilerTest;
 import org.graalvm.compiler.debug.DebugContext;
 import org.graalvm.compiler.debug.DebugDumpScope;
+import org.graalvm.compiler.debug.TTY;
 import org.graalvm.compiler.graph.Node;
 import org.graalvm.compiler.nodes.FullInfopointNode;
 import org.graalvm.compiler.nodes.Invoke;
@@ -32,12 +38,13 @@ import org.graalvm.compiler.nodes.StructuredGraph;
 import org.graalvm.compiler.nodes.StructuredGraph.AllowAssumptions;
 import org.graalvm.compiler.nodes.StructuredGraph.Builder;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration;
+import org.graalvm.compiler.options.OptionValues;
 import org.graalvm.compiler.phases.OptimisticOptimizations;
 import org.graalvm.compiler.phases.PhaseSuite;
-import org.graalvm.compiler.phases.common.CanonicalizerPhase;
 import org.graalvm.compiler.phases.common.DeadCodeEliminationPhase;
-import org.graalvm.compiler.phases.common.inlining.InliningPhase;
 import org.graalvm.compiler.phases.tiers.HighTierContext;
+import org.graalvm.compiler.serviceprovider.GraalServices;
+import org.junit.Assert;
 import org.junit.Ignore;
 import org.junit.Test;
 
@@ -176,7 +183,9 @@ public class InliningTest extends GraalCompilerTest {
     public void testClassHierarchyAnalysis() {
         assertInlined(getGraph("invokeLeafClassMethodSnippet", false));
         assertInlined(getGraph("invokeConcreteMethodSnippet", false));
-        assertInlined(getGraph("invokeSingleImplementorInterfaceSnippet", false));
+        if (GraalServices.hasLookupReferencedType()) {
+            assertInlined(getGraph("invokeSingleImplementorInterfaceSnippet", false));
+        }
         // assertInlined(getGraph("invokeConcreteInterfaceMethodSnippet", false));
 
         assertNotInlined(getGraph("invokeOverriddenPublicMethodSnippet", false));
@@ -188,7 +197,9 @@ public class InliningTest extends GraalCompilerTest {
     public void testClassHierarchyAnalysisIP() {
         assertManyMethodInfopoints(assertInlined(getGraph("invokeLeafClassMethodSnippet", true)));
         assertManyMethodInfopoints(assertInlined(getGraph("invokeConcreteMethodSnippet", true)));
-        assertManyMethodInfopoints(assertInlined(getGraph("invokeSingleImplementorInterfaceSnippet", true)));
+        if (GraalServices.hasLookupReferencedType()) {
+            assertManyMethodInfopoints(assertInlined(getGraph("invokeSingleImplementorInterfaceSnippet", true)));
+        }
         //@formatter:off
         // assertInlineInfopoints(assertInlined(getGraph("invokeConcreteInterfaceMethodSnippet", true)));
         //@formatter:on
@@ -196,6 +207,40 @@ public class InliningTest extends GraalCompilerTest {
         assertFewMethodInfopoints(assertNotInlined(getGraph("invokeOverriddenPublicMethodSnippet", true)));
         assertFewMethodInfopoints(assertNotInlined(getGraph("invokeOverriddenProtectedMethodSnippet", true)));
         assertFewMethodInfopoints(assertNotInlined(getGraph("invokeOverriddenInterfaceMethodSnippet", true)));
+    }
+
+    public static void traceInliningTest() {
+        callTrivial();
+    }
+
+    private static void callTrivial() {
+        callNonTrivial();
+    }
+
+    private static double callNonTrivial() {
+        double x = 0.0;
+        for (int i = 0; i < 10; i++) {
+            x += i * 1.21;
+        }
+        return x;
+    }
+
+    @Test
+    @SuppressWarnings("try")
+    public void testTracing() {
+        OptionValues options = new OptionValues(getInitialOptions(), GraalOptions.TraceInlining, true);
+        StructuredGraph graph;
+        try (TTY.Filter f = new TTY.Filter()) {
+            graph = getGraph("traceInliningTest", options, false);
+        }
+        String inliningTree = graph.getInliningLog().formatAsTree(false);
+        String expectedRegex = "compilation of org.graalvm.compiler.core.test.inlining.InliningTest.traceInliningTest.*: \\R" +
+                        "  at .*org.graalvm.compiler.core.test.inlining.InliningTest.traceInliningTest.*: <GraphBuilderPhase> org.graalvm.compiler.core.test.inlining.InliningTest.callTrivial.*: yes, inline method\\R" +
+                        "    at .*org.graalvm.compiler.core.test.inlining.InliningTest.callTrivial.*: .*\\R" +
+                        "       .*<GraphBuilderPhase> org.graalvm.compiler.core.test.inlining.InliningTest.callNonTrivial.*: .*(.*\\R)*" +
+                        "       .*<InliningPhase> org.graalvm.compiler.core.test.inlining.InliningTest.callNonTrivial.*: .*(.*\\R)*";
+        Pattern expectedPattern = Pattern.compile(expectedRegex, Pattern.MULTILINE);
+        Assert.assertTrue("Got: " + inliningTree, expectedPattern.matcher(inliningTree).matches());
     }
 
     @SuppressWarnings("all")
@@ -233,9 +278,13 @@ public class InliningTest extends GraalCompilerTest {
         return superClass.protectedOverriddenMethod();
     }
 
-    @SuppressWarnings("try")
     private StructuredGraph getGraph(final String snippet, final boolean eagerInfopointMode) {
-        DebugContext debug = getDebugContext();
+        return getGraph(snippet, null, eagerInfopointMode);
+    }
+
+    @SuppressWarnings("try")
+    private StructuredGraph getGraph(final String snippet, OptionValues options, final boolean eagerInfopointMode) {
+        DebugContext debug = options == null ? getDebugContext() : getDebugContext(options, null, null);
         try (DebugContext.Scope s = debug.scope("InliningTest", new DebugDumpScope(snippet, true))) {
             ResolvedJavaMethod method = getResolvedJavaMethod(snippet);
             Builder builder = builder(method, AllowAssumptions.YES, debug);
@@ -246,10 +295,10 @@ public class InliningTest extends GraalCompilerTest {
                                 : getDefaultGraphBuilderSuite();
                 HighTierContext context = new HighTierContext(getProviders(), graphBuilderSuite, OptimisticOptimizations.ALL);
                 debug.dump(DebugContext.BASIC_LEVEL, graph, "Graph");
-                new CanonicalizerPhase().apply(graph, context);
-                new InliningPhase(new CanonicalizerPhase()).apply(graph, context);
+                createCanonicalizerPhase().apply(graph, context);
+                createInliningPhase().apply(graph, context);
                 debug.dump(DebugContext.BASIC_LEVEL, graph, "Graph");
-                new CanonicalizerPhase().apply(graph, context);
+                createCanonicalizerPhase().apply(graph, context);
                 new DeadCodeEliminationPhase().apply(graph);
                 return graph;
             }
@@ -434,7 +483,7 @@ public class InliningTest extends GraalCompilerTest {
 
     private static final class StaticFinalFields {
 
-        private static final Number NumberStaticFinalField = new Integer(1);
+        private static final Number NumberStaticFinalField = Integer.valueOf(1);
         private static final SuperClass SuperClassStaticFinalField = new SubClassA(2);
         private static final FinalSubClass FinalSubClassStaticFinalField = new FinalSubClass(3);
         private static final SingleImplementorInterface SingleImplementorStaticFinalField = new SubClassA(4);
@@ -446,7 +495,7 @@ public class InliningTest extends GraalCompilerTest {
 
     private static final class FinalFields {
 
-        private final Number numberFinalField = new Integer(1);
+        private final Number numberFinalField = Integer.valueOf(1);
         private final SuperClass superClassFinalField = new SubClassA(2);
         private final FinalSubClass finalSubClassFinalField = new FinalSubClass(3);
         private final SingleImplementorInterface singleImplementorFinalField = new SubClassA(4);
@@ -458,7 +507,7 @@ public class InliningTest extends GraalCompilerTest {
 
     private static final class Fields {
 
-        private Number numberField = new Integer(1);
+        private Number numberField = Integer.valueOf(1);
         private SuperClass superClassField = new SubClassA(2);
         private FinalSubClass finalSubClassField = new FinalSubClass(3);
         private SingleImplementorInterface singleImplementorField = new SubClassA(4);
